--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
                       <h3 class="fConnectHeading">Catch me up on</h3>
                       <hr width="23%" color="khaki" class="hrConnect1">
                       <hr color="black" class="hrConnect2">
-                      <a href="https://web.facebook.com/?_rdc=1&_rdr" target="_blank" class="fbIcon"><i class="fa fa-facebook-square fbIconSize" aria-hidden="true"></i></a>
-                      <a href="https://twitter.com/_hfarooqui898" target="_blank" class="twtIcon"><i class="fa fa-twitter-square twtIconSize" style="font-size: x-large;" aria-hidden="true"></i></a>
+                      <a href="https://web.facebook.com/hassan.farooqui.35" target="_blank" class="fbIcon"><i class="fa fa-facebook-square fbIconSize" aria-hidden="true"></i></a>
+                      <a href="https://twitter.com/hfarooqui898" target="_blank" class="twtIcon"><i class="fa fa-twitter-square twtIconSize" style="font-size: x-large;" aria-hidden="true"></i></a>
                     </div>
                   </div>
               </div>
